novo gerenciamento de conexoes * uso de listeners * setar antecipadamente em cada nova conexão as alterações de valor * inicio de interação com a view